tests/failing/assign_incompatible.dodo
// Expected: Cannot widen from type 2 to 1

fn main() {
    let x: u8 = 300;
}
